--- a/js/2020-09-17.md
+++ b/js/2020-09-17.md
@@ -1,15 +1,37 @@
 # ES6+
 
-## Block Scope
+## Scope
 
 함수스코프란 함수에 의해서 생기는 범위, 변수의 유효범위
 
+- function의 블록 {} 범위를 갖는 스코프
+
+- 자바스크립트의 선언문 var는 함수 스코프 내에서 유효
+
 블락스코프란 블락에 의해 생기는 유효범위로 {} 에 의해서 생기는 유효 범위다.
 
-let const에 대해서만 동작
+- let const에 대해서만 동작
 
-if, for, while, switch-case문
-문 자체가 하나의 블록스코프가 된다.
+- if, for, while, switch-case문
+  문 자체가 하나의 블록스코프가 된다.
+
+js 코드가 컴파일되는 과정을 거치면, 코드가 렉싱되고 스코프에 변수 목록을 작성한다. 그 이후 LHS, RHS 탐색을 통해 변수를 참조한다.
+
+```jsx
+if (true) {
+  var a = "hi";
+}
+console.log(a); // hi
+
+if (true) {
+  let b = "bye";
+}
+console.log(b); //ReferenceError: b is not defined
+```
+
+let은 블록스코프에서 유효하고, var는 함수 스코프에서 유효 하기에 let으로 선언한 변수는 if문 종료 후에 상실 된다.
+
+내부 스코프에서 외부 스코프 참조는 가능하지만 , 외부에서 내부로의 참조는 일반적으로 불가능.
 
 ## Hoisting
 
@@ -93,3 +115,53 @@ let a = 10;
 con
 
 ## this
+
+```jsx
+var value = 0;
+var obj = {
+  value: 1,
+  setValue: function () {
+    this.value = 2; // this: obj -> obj.value =2
+    (function () {
+      this.value = 3; //this: window -> 3; 전역 value 3
+    })();
+  },
+};
+obj.setValue();
+console.log(value); // 3
+console.log(obj.value); //2
+```
+
+- 함수 내부에서도 같은 this 사용하고 싶으면 this를 따로 선언하거나 call
+
+- 블록스코프는 this의 영향을 받지 않는다.
+
+## let, const
+
+### let
+
+- 재할당 가능.
+
+- 반복문 내에서의 함수 실행시 각각의 블록스코프를 생성한다.
+
+### const
+
+- 선언과 동시에 할당도 같이 해줘야된다.
+
+- 참조형 데이터를 상수변수에 할당할 경우에는 참조데이터의 내부 prop들은 상수가 아니다.
+
+- 재할당 불가능.
+
+### Object.freeze 와 deep copy
+
+Object.freeze를 사용하면 내부 prop를 얼려준다.
+
+deep copy
+
+- 얕은복사 : 객체의 프로퍼티들을 복사 1단계까지만
+- 깊은복사 : 객체의 프로퍼티들을 복사 모든 depth에 대해
+  - 깊은 복사를 해야지 immutable 하다.
+
+## template literal
+
+- backtick, multi-line, string interpolation
