--- a/2020-09-22.md
+++ b/2020-09-22.md
@@ -70,4 +70,155 @@ console.log(
 ## default parameter
 
 - 매개변수 기본값, 함수의 인자.
--
+
+```jsx
+function a(a = 1, b = a, c = 3) {
+  console.log(a, b, c);
+}
+console.log(a());
+// 1,1,3
+```
+
+- 내부에서 let으로 작동
+- 인자로 함수호출도 가능
+
+## rest parameter
+
+```jsx
+function f(x, y, ...z) {
+  console.log(z);
+}
+f(1, 2, true, null, undefined, 10);
+//[true, null, undefined, 10]
+```
+
+나머지의 값을 배열로 만들어 돌려준다.
+rest parameter는 마지막 인자로 와야된다.
+
+## spread operator
+
+- 배열의 각 인자를 펼친 효과
+
+```jsx
+const values = [20, 10, 30, 50, 40];
+console.log(...values);
+// 20, 10, 30, 50, 40
+```
+
+- 앞뒤로 다른 값들과 같이 사용가능하다.
+- iterable(반복되는) 데이터는 모두 사용가능하다. Set도 펼칠 수 있음.
+- 얕은 복사만을 수행한다.
+
+## enhanced object functionalities
+
+### shorthand property
+
+- 프로퍼티의 key와 value가 같을 때 value 생략가능.
+
+- destructuring assignment
+
+```jsx
+const { name, age } = {
+  name: "재남",
+  age: 30,
+};
+```
+
+### concised method
+
+- :function 키워드 제거.
+- super 명령어로 상위 클래스에 접근 가능.
+- prototype 프로퍼티가 없어서 생성자 함수로 사용할 수 없다.
+
+```jsx
+let obj = {
+  name: "foo",
+  getName() {
+    return this.name;
+  },
+  //getName : function(){return this.name}
+};
+```
+
+### computed property
+
+- 객체 리터럴 선언시 프로퍼티 키값에 대관호 표기로 접근가능.
+- 대괄호 내에는 값 또는 식을 넣어 조합가능.
+
+```jsx
+let className = "class";
+let obj = {};
+obj["A" + className] = "A급";
+const obj2 = {
+  ["A" + className]: "A급",
+};
+//obj2 {A class : 'A급'}
+```
+
+## arrow function
+
+```jsx
+let a = () => new Date();
+
+let b = (a) => a * a;
+
+let c = (a, b) => a + b;
+
+let d = (a, b) => {
+  console.log(a, b);
+};
+
+let e = function (x) {
+  return {
+    x: x,
+  };
+};
+
+let e2 = (x) => ({ x });
+```
+
+- return 값이 객체인 경우 ()사용.
+- 실행 컨텍스트 생성시 this 바인딩을 하지 않음.
+- 함수 스코프 생성.
+- super, arguments, new.target도 바인딩하지 않는다.
+
+## scope
+
+- 'strict mode' : 함수선언문도 블락스코프에 갇힌다.
+- es6에서는 함수 선언문 사용 X arrow function
+- 객체 : 메소드 축약형
+- 어떻게든 함수선언문을 안쓰는 쪽으로 작성.
+
+---
+
+# REACT
+
+## react setting
+
+- npx create-react-app 프로젝트명 : 리액트 프로젝트 생성
+- npm or yarn start : 리액트 서버 시작
+- node_modules : 라이브러리 보관함
+- public : static 파일 보관함
+- src : 소스코드 보관함
+- ESlint setting: <https://velog.io/@vraimentres/react-eslint-airbnb-vscode-세팅>
+
+## JSX
+
+- js 안에서 html 작성
+- 메인 페이지 작동원리 App.js -> index.js -> public/index.html
+- class 문법과 겹치기 때문에 className
+- 데이터 바인딩이 쉽다.
+
+        let post = '맛집' ; <h4>{ post }</h4>
+        img src = { logo }
+        style = {{ color : 'blue' }} #object 자료형으로 넣는다.
+
+### state
+
+- 변수대신 사용하는 데이터 저장공간.
+- 문자,숫자 ,array, object 저장가능.
+- 웹이 app처럼 동작하게 만들고 싶을때 사용.
+- state가 변경되면 html이 자동으로 재랜더링 된다.
+- import { useState }
+
+        let [a,b] = useState('abc'); //a = abc state 데이터 , b = state 데이터 변경함수
