--- a/2020-09-28.md
+++ b/2020-09-28.md
@@ -12,8 +12,113 @@
 
   react 상에서 state들은 immutable 해야된다.
 
+- 여러 컴포넌트에서 사용되는 값들은 별도의 공간에서 생성/갱신 -> Redux, Context API 활용
+
+  ```jsx
+  // class component 에서의 state
+  import React from 'react';
+
+  class Counter extends React.Component {
+    state = {
+      counter: 0,
+    };
+    onClick = () => {
+      const counter = this.state.counter + 1;
+      this.setState({ counter });
+    };
+    render() {
+      const { counter } = this.state;
+      return <p onClick={this.onClick}>Counter : {counter}</p>;
+    }
+  }
+  ```
+
+- State Reducer 패턴
+
+      state = {
+        value: 0,
+      };
+      // setter 함수를 이용할 경우
+      setState(prevState => ({
+        value: prevState.value + 1,
+      }));
+      setState(prevState => ({
+        value: prevState.value + 3,
+      }));
+
+- Redux를 사용할 때의 패턴
+
+  1. 상태값에 대한 직접적인 변화를 가하는 setter 제공 X
+  2. 대신 하나의 함수에서 임의의 객체를 전달받아 (event), 이를 상태값에 반영
+  3. 현 앱에서 공유할 상태값들을 한 곳에서 관리
+
+  ```jsx
+  function dispatch(action, state) {
+    const { type, payload } = action;
+    if (type === 'INCREMENT') {
+      const { value } = payload;
+      return {
+        ...state,
+        value: state.value + value,
+      };
+    } else {
+      return state;
+    }
+  }
+  const action = { type: 'INCREMENT', payload: { value: 1 } };
+  dispatch(action);
+
+  dispatch({
+    type: 'INCREMENT',
+    payload: { value: 3 },
+  });
+  ```
+
+- useReducer/Context API
+- 어떻게 하면 상태값을 효율적으로 잘 관리할 수 있을까, 상태값에 따라 화면이 불필요하게 없데이트 되지 않도록 하자.
+
 ## Component
 
 - return () 안에서는 연속된 태그들은 위치할 수 없다. 사용하고 싶으면 div 로 묶어주자.
 - HTML을 한단어로 줄여서 쓸 수 있는 방법.
 - 관리가 편해진다.
+- 자주 변경되는 UI 재렌더링을 부분적으로 일어나게 할 수 있기 때문에 성능적으로도 좋다.
+- 컴포넌트의 많은 루틴을 순수 함수로서 작성.
+  - 상태값/속성값이 같으면, 항상 같은 값을 반환해야된다.
+  - 다른 side effects를 발생시키지 않아야된다. (http요청, 데이터 저장, 쿠키조작 등)
+- 상태값은 불변객채로 관리해야된다. immutable object
+
+### 순수 함수
+
+- 하나 이상의 인자를 받고, 인자를 변경하지않고, 참조하여 새로운 값을 반환
+  - reduce, filter, map, join
+
+### 커링 Currying
+
+- 일부의 인자를 고정한 새로운 함수를 반환하는 함수를 만드는 기법(고차 컴포넌트, hook..)
+
+  ```jsx
+  function userLogs(username){
+    function wrap(message){
+      console.log(`${username} - ${message}`);
+    }
+    return wrap;
+  }
+
+  const log = userLogs('Chinseok Lee')
+  log('Hello World'
+  const userLog = username => message => {
+    console.log(`${username} - ${message}`);
+  }
+  // Chinseok Lee - Hello World
+  ```
+
+## Ant Design
+
+- 알리바바에서 개발한 UI Framework : 깊은 디자인 철학을 가진 UX
+- yarn add antd
+  - App.js 참조 경로에 antd/dist/antd.css 추가
+
+### 삼항연산자
+
+-
