--- a/2020.11.01.md
+++ b/2020.11.01.md
@@ -1,5 +1,35 @@
 ## login, sign up
 
+### 장고에서 회원가입 api만들기
+
+```python
+from rest_framework import serializers
+from django.contrib.auth import get_user_model
+
+User = get_user_model()
+
+class SignupSerializer(serializers.ModelSerializer):
+    password = serializers.CharField(write_only=True)
+
+    def create(self, validated_data):
+        user = User.objects.create(username=validated_data['username'])
+        user.set_password(validated_data['password'])
+        user.save()
+        return user
+        #user.password = validated_data['password']
+
+    class Meta:
+        model = User
+        fields = ['pk', 'username', 'password']
+```
+
+- 회원가입을 구현하기 위해 먼저 장고에서 api를 만들어준다.
+- 옛날에 model부분 강의도 그렇고 accounts앱의 models.py에서 장고의 유저모델을 상속받아 내가 원하는 필드를 추가해가며 새로 유저모델을 정의한다. 이후에도 필드가 수정되며 모델이 바뀔 수가 있다. 그래서 views나 serializer등등에서 내가 정의한 유저모델을 사용하기보다는 get_user_model을 가져와서 사용한다. 내가 이해한게 맞나 모르겠다??
+- field에서 pk는 읽기 전용이다.
+- password는 암호화에서 저장되어야된다. 그래서 create 함수를 통해 저장 방식을 새로 정의해준다.
+- write_only는 쓰기전용으로 읽기불가능이다.
+- 값들의 유효성 검사를 통해 user정보가 입력된다. password는 set_password()를 통해 저장해야지 암호화되어 저장된다.
+
 ```jsx
 export default function Signup() {
   const history = useHistory();
